base/app/envs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-app-ingress
  namespace: cert-manager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: aqeel.groveops.net
spec:
  ingressClassName: nginx
  rules:
  - host: aqeel.groveops.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-web-app-service
            port:
              number: 80
  tls:
  - hosts:
    - aqeel.groveops.net
    - "*.groveops.net"
    secretName: example-com-tls
